--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="mini-logo.svg" type="image/x-icon" rel="icon">
+    <link href="assets/mini-logo.svg" type="image/x-icon" rel="icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <img src="Logo.svg" alt="logo"/>
+    <img src="assets/Logo.svg" alt="logo"/>
 
 </body>
 
