--- a/index.html
+++ b/index.html
@@ -13,7 +13,34 @@
 </head>
 
 <body>
-    <img src="assets/Logo.svg" alt="logo"/>
+    <header>
+        <img src="assets/Logo.svg" alt="logo">
+        <ul>
+            <li>
+                <a href="#">Products</a>
+            </li>
+            <li>
+                <a href="#">Solutions</a>
+            </li>
+            <li>
+                <a href="#">Resources</a>
+            </li>
+            <li>
+                <a href="#">Pricing</a>
+            </li>
+        </ul>
+
+        <nav>
+            <button>Login</button>
+            <button>Try Whitepace free</button>
+        </nav>
+
+        <button class="burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </button>
+    </header>
 
 </body>
 
