--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <img src="assets/Logo.svg" alt="logo">
         <ul>
             <li>
-                <a href="#">Products</a>
+                <batton>Products</batton>
             </li>
             <li>
-                <a href="#">Solutions</a>
+                <batton>Solutions</batton>
             </li>
             <li>
-                <a href="#">Resources</a>
+                <batton>Resources</batton>
             </li>
             <li>
-                <a href="#">Pricing</a>
+                <batton>Pricing</batton>
             </li>
         </ul>
 
