--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
             <div></div>
         </button>
     </header>
+    <main>
+        <section class="banner">
+            <h1>Get More Done with whitepace</h1>
+            <p>Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
+            <button>Try TasKey Free </button>
+            <figure>
+                
+            </figure>
+        </section>
+    </main>
 
 </body>
 
