--- a/index.html
+++ b/index.html
@@ -43,11 +43,47 @@
     </header>
     <main>
         <section class="banner">
-            <h1>Get More Done with whitepace</h1>
-            <p>Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
-            <button>Try TasKey Free </button>
+            <article>
+                <h1>Get More Done with whitepace</h1>
+                <p>Project management software that enables your teams to collaborate, plan, analyze and manage everyday
+                    tasks</p>
+                <button>Try TasKey Free</button>
+            </article>
             <figure>
-                
+                <img src="assets/rain-trees-thumbnail.jpg" alt="rain-trees">
+            </figure>
+        </section>
+        <section class="project">
+            <article>
+                <h2>Project Management</h2>
+                <p>Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly from
+                    the app. Take photos with the mobile app and save them to a note.</p>
+                <button>Get Started</button>
+            </article>
+            <figure>
+                <img src="assets/rain-trees-thumbnail.jpg" alt="rain-trees">
+            </figure>
+        </section>
+        <section class="work">
+            <article>
+                <h2>Work together</h2>
+                <p>With whitepace, share your notes with your colleagues and collaborate on them.
+                    You can also publish a note to the internet and share the URL with others.</p>
+                <button>Try it now</button>
+            </article>
+            <figure>
+                <img src="assets/decore.svg" alt="rain-trees">
+            </figure>
+        </section>
+        <section class="extension">
+            <article>
+                <h2>Use as Extension</h2>
+                <p>Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or
+                    create your own scripts and plugins using the Extension API.</p>
+                <button>Let’s Go</button>
+            </article>
+            <figure>
+                <img src="assets/rain-trees-thumbnail.jpg" alt="rain-trees">
             </figure>
         </section>
     </main>
