--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </li>
         </ul>
 
-        <nav>
+        <nav class="nav">
             <button>Login</button>
             <button>Try Whitepace free</button>
         </nav>
