--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <section class="project">
             <article>
                 <h2>Project Management</h2>
-                <p>Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly from
+                <p>Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly
+                    from
                     the app. Take photos with the mobile app and save them to a note.</p>
                 <button>Get Started</button>
             </article>
@@ -86,7 +87,69 @@
                 <img src="assets/rain-trees-thumbnail.jpg" alt="rain-trees">
             </figure>
         </section>
+        <section class="sponsors">
+            <h2>Our sponsors</h2>
+            <ul>
+                <li><a href="#"><img src="assets/apple.svg" alt="apple"></a></li>
+                <li><a href="#"><img src="assets/microsoft.svg" alt="microsoft"></a></li>
+                <li><a href="#"><img src="assets/slack.svg" alt="slack"></a></li>
+                <li><a href="#"><img src="assets/google.svg" alt="google"></a></li>
+            </ul>
+        </section>
     </main>
+    <footer>
+        <figure>
+            <img src="assets/Logo.svg" alt="logo">
+            <figcaption>
+                whitepace was created for the new ways we live and work.
+                We make beautyfully designed around the world
+            </figcaption>
+        </figure>
+        <ul>
+            <h3>Product</h3>
+            <li>
+                <a href="">Overview</a>
+            </li>
+            <li>
+                <a href="">Pricing</a>
+            </li>
+            <li>
+                <a href="">Customer stories</a>
+            </li>
+        </ul>
+        <ul>
+            <h3>Resources</h3>
+            <li>
+                <a href="#">Blog</a>
+            </li>
+            <li>
+                <a href="#">Guides & tutorials</a>
+            </li>
+            <li>
+                <a href="#">Help center</a>
+            </li>
+        </ul>
+        <ul>
+            <h3>Company</h3>
+            <li>
+                <a href="#">About us</a>
+            </li>
+            <li>
+                <a href="#">Careers</a>
+            </li>
+            <li>
+                <a href="#">Media kit</a>
+            </li>
+        </ul>
+        <article>
+            <h3>Try It Today</h3>
+            <p>
+                Get started for free.
+                Add your whole team as your needs grow.
+            </p>
+            <button>Start today</button>
+        </article>
+    </footer>
 
 </body>
 
